--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </header>
     <main>
-        <section class="section-decoration">
+        <section class="section-decoration main-div">
             <div class="container">
                 <h1 class="main-header">Effective Solutions for Your Business</h1>
                 <button class="order-service-button" type="button">Order Service</button>
@@ -56,6 +56,11 @@
                 <h2 class="visually-hidden">Ways to achieve the goal</h2>
                 <ul class="ways-loc">
                     <li class="ways-list">
+                        <div class="way-icon">
+                            <svg width="64" height="64">
+                              <use href="./images/icons.svg#icon-Group"></use>
+                            </svg>
+                          </div>
                         <h3 class="sub-header">Strategy</h3>
                         <p class="sub-header-desc">Our goal is to identify the business problem to walk
                             away with the
@@ -63,6 +68,11 @@
                         </p>
                     </li>
                     <li class="ways-list">
+                        <div class="way-icon">
+                            <svg width="64" height="64">
+                              <use href=""></use>
+                            </svg>
+                          </div>
                         <h3 class="sub-header">Punctuality</h3>
                         <p class="sub-header-desc">Bring the key message to the brand's audience for the
                             best price
@@ -72,6 +82,11 @@
                         </p>
                     </li>
                     <li class="ways-list">
+                        <div class="way-icon">
+                            <svg width="64" height="64">
+                              <use href="#"></use>
+                            </svg>
+                          </div>
                         <h3 class="sub-header">Diligence</h3>
                         <p class="sub-header-desc">Research and confirm brands that present the
                             strongest digital growth
@@ -80,6 +95,11 @@
                         </p>
                     </li>
                     <li class="ways-list">
+                        <div class="way-icon">
+                            <svg width="64" height="64">
+                              <use href="#"></use>
+                            </svg>
+                          </div>
                         <h3 class="sub-header">Technologies</h3>
                         <p class="sub-header-desc">Design practice focused on digital experiences. We
                             bring forth a deep
