--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                     <li class="ways-list">
                         <div class="way-icon">
                             <svg width="64" height="64">
-                              <use href="./images/icons.svg#icon-Group"></use>
+                                <use href="./images/icons.svg#icon-Group"></use>
                             </svg>
-                          </div>
+                        </div>
                         <h3 class="sub-header">Strategy</h3>
                         <p class="sub-header-desc">Our goal is to identify the business problem to walk
                             away with the
@@ -70,9 +70,9 @@
                     <li class="ways-list">
                         <div class="way-icon">
                             <svg width="64" height="64">
-                              <use href=""></use>
+                                <use href="./images/icons.svg#icon-clock-1"></use>
                             </svg>
-                          </div>
+                        </div>
                         <h3 class="sub-header">Punctuality</h3>
                         <p class="sub-header-desc">Bring the key message to the brand's audience for the
                             best price
@@ -84,9 +84,9 @@
                     <li class="ways-list">
                         <div class="way-icon">
                             <svg width="64" height="64">
-                              <use href="#"></use>
+                                <use href="./images/icons.svg#icon-diagram-1"></use>
                             </svg>
-                          </div>
+                        </div>
                         <h3 class="sub-header">Diligence</h3>
                         <p class="sub-header-desc">Research and confirm brands that present the
                             strongest digital growth
@@ -97,9 +97,9 @@
                     <li class="ways-list">
                         <div class="way-icon">
                             <svg width="64" height="64">
-                              <use href="#"></use>
+                                <use href="./images/icons.svg#icon-astronaut-1"></use>
                             </svg>
-                          </div>
+                        </div>
                         <h3 class="sub-header">Technologies</h3>
                         <p class="sub-header-desc">Design practice focused on digital experiences. We
                             bring forth a deep
@@ -119,13 +119,89 @@
                         <div class="initials-container">
                             <h3 class="team-sub-header">Mark Guerrero</h3>
                             <p class="team-header-desc">Product Designer</p>
-                        </div>
-                    </li>
+                            <ul class="socils-list">
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.instagram.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg> 
+
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.twitter.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.facebook.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.linkedin.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                            </ul>
                     <li class="third-list-desc">
                         <img src="./images/tom.jpg" width="264" alt="Frontend Developer">
                         <div class="initials-container">
                             <h3 class="team-sub-header">Tom Ford</h3>
                             <p class="team-header-desc">Frontend Developer</p>
+                            <ul class="socils-list">
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.instagram.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg> 
+
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.twitter.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.facebook.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.linkedin.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                     <li class="third-list-desc">
@@ -133,6 +209,45 @@
                         <div class="initials-container">
                             <h3 class="team-sub-header">Camila Garcia</h3>
                             <p class="team-header-desc">Marketing</p>
+                            <ul class="socils-list">
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.instagram.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg> 
+
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.twitter.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.facebook.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.linkedin.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                            </ul> 
                         </div>
                     </li>
                     <li class="third-list-desc">
@@ -140,6 +255,45 @@
                         <div class="initials-container">
                             <h3 class="team-sub-header">Daniel Wilson</h3>
                             <p class="team-header-desc">UI Designer</p>
+                            <ul class="socils-list">
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.instagram.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                                        </svg> 
+
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.twitter.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.facebook.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="socils-icon">
+                                        <a href="https://www.linkedin.com/" target="_blank" class="social-link">
+                                        </a>
+                                        <svg width="16" height="16">
+                                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                                        </svg> 
+                                    </div>
+                                </li>
+                            </ul>
                         </div>
                     </li>
                 </ul>
@@ -157,7 +311,10 @@
                         </div>
                     </li>
                     <li class="pic-border">
+
                         <img src="./images/cashless-payment.jpg" width="360" alt="Cashless Payment">
+                        <div class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</div>
                         <div class="app-loc">
                             <h3 class="portfolio-types">Cashless Payment</h3>
                             <p class="portfolio-sub-header-desc">Marketing</p>
@@ -201,6 +358,7 @@
             </div>
         </section>
     </main>
+    <!-- Footer -->
     <footer class="footer-desc">
         <div class="container">
             <a class="footer-logo" href="./index.html">Web
@@ -211,6 +369,49 @@
                 growth solutions.
             </p>
         </div>
+        <!-- Socials -->
+        <div class="footer-div-social">
+        <p class="footer-icon-decr">Social media</p>
+        <ul class="footer-socils-list">
+            <li>
+                <div class="socils-icon">
+                    <a href="https://www.instagram.com/" target="_blank" class="social-link">
+                    </a>
+                    <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                    </svg> 
+
+                </div>
+            </li>
+            <li>
+                <div class="socils-icon">
+                    <a href="https://www.twitter.com/" target="_blank" class="social-link">
+                    </a>
+                    <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                    </svg> 
+                </div>
+            </li>
+            <li>
+                <div class="socils-icon">
+                    <a href="https://www.facebook.com/" target="_blank" class="social-link">
+                    </a>
+                    <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                    </svg> 
+                </div>
+            </li>
+            <li>
+                <div class="socils-icon">
+                    <a href="https://www.linkedin.com/" target="_blank" class="social-link">
+                    </a>
+                    <svg width="24" height="24">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                    </svg> 
+                </div>
+            </li>
+        </ul>
+    </div>
     </footer>
 </body>
 
