--- a/index.html
+++ b/index.html
@@ -370,12 +370,12 @@
             </p>
         </div>
         <!-- Socials -->
-        <div class="footer-div-social">
-        <p class="footer-icon-decr">Social media</p>
+        <div class="container">
+        <h3 class="footer-icon-decr">Social media</h3>
         <ul class="footer-socils-list">
             <li>
-                <div class="socils-icon">
-                    <a href="https://www.instagram.com/" target="_blank" class="social-link">
+                <div class="footer-socils-icon">
+                    <a href="https://www.instagram.com/" target="_blank">
                     </a>
                     <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-instagram-2"></use>
@@ -384,8 +384,8 @@
                 </div>
             </li>
             <li>
-                <div class="socils-icon">
-                    <a href="https://www.twitter.com/" target="_blank" class="social-link">
+                <div class="footer-socils-icon">
+                    <a href="https://www.twitter.com/" target="_blank">
                     </a>
                     <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-twitter-1"></use>
@@ -393,8 +393,8 @@
                 </div>
             </li>
             <li>
-                <div class="socils-icon">
-                    <a href="https://www.facebook.com/" target="_blank" class="social-link">
+                <div class="footer-socils-icon">
+                    <a href="https://www.facebook.com/" target="_blank">
                     </a>
                     <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-facebook-1"></use>
@@ -402,8 +402,8 @@
                 </div>
             </li>
             <li>
-                <div class="socils-icon">
-                    <a href="https://www.linkedin.com/" target="_blank" class="social-link">
+                <div class="footer-socils-icon">
+                    <a href="https://www.linkedin.com/" target="_blank">
                     </a>
                     <svg width="24" height="24">
                         <use href="./images/icons.svg#icon-linkedin-1"></use>
