--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer-desc">
-        <div class="container">
+        <div class="container footer-inner">
             <a class="footer-logo" href="./index.html">Web
                 <span class="logo-second-footer">Studio</span>
             </a>
@@ -368,9 +368,9 @@
                 marketing &
                 growth solutions.
             </p>
-        </div>
+        
         <!-- Socials -->
-        <div class="container">
+        <div class="footer-icons-div">
         <h3 class="footer-icon-decr">Social media</h3>
         <ul class="footer-socils-list">
             <li>
@@ -412,6 +412,7 @@
             </li>
         </ul>
     </div>
+</div>
     </footer>
 </body>
 
