--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <span class="main-logo-second">Studio</span>
                 </a>
                 <ul class="h-list">
-                    <li><a class="header-list" href="./index.html">Studio</a></li>
+                    <li><a class="header-list current" href="./index.html">Studio</a></li>
                     <li><a class="header-list" href="">Portfolio</a></li>
                     <li><a class="header-list" href="">Contacts</a></li>
                 </ul>
@@ -126,7 +126,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
-                                        </svg> 
+                                        </svg>
 
                                     </div>
                                 </li>
@@ -136,7 +136,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                                 <li>
@@ -145,7 +145,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                                 <li>
@@ -154,7 +154,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                             </ul>
@@ -170,7 +170,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
-                                        </svg> 
+                                        </svg>
 
                                     </div>
                                 </li>
@@ -180,7 +180,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                                 <li>
@@ -189,7 +189,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                                 <li>
@@ -198,7 +198,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                             </ul>
@@ -216,7 +216,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
-                                        </svg> 
+                                        </svg>
 
                                     </div>
                                 </li>
@@ -226,7 +226,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                                 <li>
@@ -235,7 +235,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                                 <li>
@@ -244,10 +244,10 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
-                            </ul> 
+                            </ul>
                         </div>
                     </li>
                     <li class="third-list-desc">
@@ -262,7 +262,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
-                                        </svg> 
+                                        </svg>
 
                                     </div>
                                 </li>
@@ -272,7 +272,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                                 <li>
@@ -281,7 +281,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                                 <li>
@@ -290,7 +290,7 @@
                                         </a>
                                         <svg width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
-                                        </svg> 
+                                        </svg>
                                     </div>
                                 </li>
                             </ul>
@@ -304,33 +304,44 @@
                 <h2 class="portfolio-title">Our Portfolio</h2>
                 <ul class="portfolio-list">
                     <li class="pic-border">
+                        <div class="portfolio-box">  
                         <img src="./images/banking-app.jpg" width="360" alt="Banking App">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="app-loc">
                             <h3 class="portfolio-types">Banking App</h3>
                             <p class="portfolio-sub-header-desc">App</p>
                         </div>
                     </li>
                     <li class="pic-border">
-
-                        <img src="./images/cashless-payment.jpg" width="360" alt="Cashless Payment">
-                        <div class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
-                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</div>
+                        <div class="portfolio-box">
+                        <img src="./images/cashless-payment.jpg" width="360" alt="Cashless Payment"> 
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="app-loc">
                             <h3 class="portfolio-types">Cashless Payment</h3>
                             <p class="portfolio-sub-header-desc">Marketing</p>
                         </div>
-
                     </li>
                     <li class="pic-border">
+                        <div class="portfolio-box"> 
                         <img src="./images/meditation-app.jpg" width="360" alt="Meditation App">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="app-loc">
                             <h3 class="portfolio-types">Meditation App</h3>
                             <p class="portfolio-sub-header-desc">App</p>
                         </div>
-
                     </li>
                     <li class="pic-border">
+                        <div class="portfolio-box">   
                         <img src="./images/taxi-service.jpg" width="360" alt="Taxi Service">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="app-loc">
                             <h3 class="portfolio-types">Taxi Service</h3>
                             <p class="portfolio-sub-header-desc">Marketing</p>
@@ -338,7 +349,11 @@
 
                     </li>
                     <li class="pic-border">
+                        <div class="portfolio-box"> 
                         <img src="./images/screen-ilustrations.jpg" width="360" alt="Screen Illustrations">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="app-loc">
                             <h3 class="portfolio-types">Screen Illustrations</h3>
                             <p class="portfolio-sub-header-desc">Design</p>
@@ -346,7 +361,11 @@
 
                     </li>
                     <li class="pic-border">
+                        <div class="portfolio-box"> 
                         <img src="./images/online-courses.jpg" width="360" alt="Online Courses">
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App ·
+                            Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        </div>
                         <div class="app-loc">
                             <h3 class="portfolio-types">Online Courses</h3>
                             <p class="portfolio-sub-header-desc">Marketing</p>
@@ -361,58 +380,59 @@
     <!-- Footer -->
     <footer class="footer-desc">
         <div class="container footer-inner">
-            <a class="footer-logo" href="./index.html">Web
-                <span class="logo-second-footer">Studio</span>
-            </a>
-            <p class="footer-logo-desc">Increase the flow of customers and sales for your business with digital
-                marketing &
-                growth solutions.
-            </p>
-        
-        <!-- Socials -->
-        <div class="footer-icons-div">
-        <h3 class="footer-icon-decr">Social media</h3>
-        <ul class="footer-socils-list">
-            <li>
-                <div class="footer-socils-icon">
-                    <a href="https://www.instagram.com/" target="_blank">
-                    </a>
-                    <svg width="24" height="24">
-                        <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg> 
+            <div class="footer-complex-div">
+                <a class="footer-logo" href="./index.html">Web
+                    <span class="logo-second-footer">Studio</span>
+                </a>
+                <p class="footer-logo-desc">Increase the flow of customers and sales for your business with digital
+                    marketing &
+                    growth solutions.
+                </p>
+            </div>
+            <!-- Socials -->
+            <div class="footer-icons-div">
+                <h3 class="footer-icon-decr">Social media</h3>
+                <ul class="footer-socils-list">
+                    <li>
+                        <div class="footer-socils-icon">
+                            <a href="https://www.instagram.com/" target="_blank">
+                            </a>
+                            <svg width="24" height="24">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
 
-                </div>
-            </li>
-            <li>
-                <div class="footer-socils-icon">
-                    <a href="https://www.twitter.com/" target="_blank">
-                    </a>
-                    <svg width="24" height="24">
-                        <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg> 
-                </div>
-            </li>
-            <li>
-                <div class="footer-socils-icon">
-                    <a href="https://www.facebook.com/" target="_blank">
-                    </a>
-                    <svg width="24" height="24">
-                        <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg> 
-                </div>
-            </li>
-            <li>
-                <div class="footer-socils-icon">
-                    <a href="https://www.linkedin.com/" target="_blank">
-                    </a>
-                    <svg width="24" height="24">
-                        <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg> 
-                </div>
-            </li>
-        </ul>
-    </div>
-</div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="footer-socils-icon">
+                            <a href="https://www.twitter.com/" target="_blank">
+                            </a>
+                            <svg width="24" height="24">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="footer-socils-icon">
+                            <a href="https://www.facebook.com/" target="_blank">
+                            </a>
+                            <svg width="24" height="24">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="footer-socils-icon">
+                            <a href="https://www.linkedin.com/" target="_blank">
+                            </a>
+                            <svg width="24" height="24">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </footer>
 </body>
 
