--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
     </header>
     <main>
+        <!-- Section 1 -->
         <section class="section-decoration main-div">
             <div class="container">
                 <h1 class="main-header">Effective Solutions for Your Business</h1>
