--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             <h3 class="team-sub-header">Mark Guerrero</h3>
                             <p class="team-header-desc">Product Designer</p>
                             <ul class="socils-list">
-                                <li>
+                                <li class="socials-list-li">
                                     <a class="socils-icon" href="https://www.instagram.com/" target="_blank"
                                         class="social-link">
 
