--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="socials-list-li" >
                                     <a class="socils-icon" href="https://www.facebook.com/" target="_blank"
                                         class="social-link">
 
