--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                                         </svg>
                                     </a>
                                 </li>
-                                <li>
+                                <li class="socials-list-li">
                                     <a class="socils-icon" href="https://www.twitter.com/" target="_blank"
                                         class="social-link">
 
