--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                                     </a>
 
                                 </li>
-                                <li>
+                                <li class="socials-list-li">
                                     <a class="socils-icon" href="https://www.linkedin.com/" target="_blank"
                                         class="social-link">
 
