--- a/index.html
+++ b/index.html
@@ -297,6 +297,7 @@
                 </ul>
             </div>
         </section>
+        <!-- Section 4 -->
         <section class="section-portfolio">
             <div class="container">
                 <h2 class="portfolio-title">Our Portfolio</h2>
