--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
             </div>
             <!-- Socials -->
             <div class="footer-icons-div">
-                <h3 class="footer-icon-decr">Social media</h3>
+                <p class="footer-icon-decr">Social media</p>
                 <ul class="footer-socils-list">
                     <li>
                             <a class="footer-socils-icon" href="https://www.instagram.com/" target="_blank">
