--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
             <div class="footer-icons-div">
                 <p class="footer-icon-decr">Social media</p>
                 <ul class="footer-socils-list">
-                    <li>
+                    <li class="socials-list-li-footer">
                             <a class="footer-socils-icon" href="https://www.instagram.com/" target="_blank">
                             
                             <svg class="footer-color-svg" width="24" height="24">
