--- a/index.html
+++ b/index.html
@@ -123,8 +123,7 @@
                             <p class="team-header-desc">Product Designer</p>
                             <ul class="socils-list">
                                 <li class="socials-list-li">
-                                    <a class="socils-icon" href="https://www.instagram.com/" target="_blank"
-                                        class="social-link">
+                                    <a class="socils-icon" href="https://www.instagram.com/" target="_blank">
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
@@ -132,8 +131,7 @@
                                     </a>
                                 </li>
                                 <li class="socials-list-li">
-                                    <a class="socils-icon" href="https://www.twitter.com/" target="_blank"
-                                        class="social-link">
+                                    <a class="socils-icon" href="https://www.twitter.com/" target="_blank">
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
@@ -141,8 +139,7 @@
                                     </a>
                                 </li>
                                 <li class="socials-list-li" >
-                                    <a class="socils-icon" href="https://www.facebook.com/" target="_blank"
-                                        class="social-link">
+                                    <a class="socils-icon" href="https://www.facebook.com/" target="_blank">
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
@@ -151,8 +148,7 @@
 
                                 </li>
                                 <li class="socials-list-li">
-                                    <a class="socils-icon" href="https://www.linkedin.com/" target="_blank"
-                                        class="social-link">
+                                    <a class="socils-icon" href="https://www.linkedin.com/" target="_blank">
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -168,7 +164,7 @@
                             <ul class="socils-list">
                                 <li>
                                     <a class="socils-icon" href="https://www.instagram.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
@@ -177,7 +173,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.twitter.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
@@ -186,7 +182,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.facebook.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
@@ -196,7 +192,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.linkedin.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -212,7 +208,7 @@
                             <ul class="socils-list">
                                 <li>
                                     <a class="socils-icon" href="https://www.instagram.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
@@ -221,7 +217,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.twitter.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
@@ -230,7 +226,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.facebook.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
@@ -240,7 +236,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.linkedin.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
@@ -256,7 +252,7 @@
                             <ul class="socils-list">
                                 <li>
                                     <a class="socils-icon" href="https://www.instagram.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-instagram-2"></use>
@@ -265,7 +261,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.twitter.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-twitter-1"></use>
@@ -274,7 +270,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.facebook.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-facebook-1"></use>
@@ -284,7 +280,7 @@
                                 </li>
                                 <li>
                                     <a class="socils-icon" href="https://www.linkedin.com/" target="_blank"
-                                        class="social-link">
+                                        >
 
                                         <svg class="color-svg" width="16" height="16">
                                             <use href="./images/icons.svg#icon-linkedin-1"></use>
